working csrf authentication for all endpoints